testing out a different fix for the search input on mobile.

--- a/assets/scss/base/_main.scss
+++ b/assets/scss/base/_main.scss
@@ -19,3 +19,8 @@
 textarea:focus, input:focus{
   outline: 0;
 }
+
+
+.fixfixed .site-header__nav {
+  position: absolute;
+}
